# claude-desktop-digital-life

./: .gitignore  package-lock.json
.github/workflows/: build.yml
digital_life_core/: Cargo.toml
digital_life_core/examples/: demo.rs
digital_life_core/src/: lib.rs
digital_life_core/src/agent/: life_agent.rs  mod.rs
digital_life_core/src/consciousness/: core.rs
digital_life_core/src/evolution/: engine.rs  mod.rs
digital_life_core/src/needs/: mod.rs  system.rs
digital_life_core/src/perception/: core.rs  mod.rs
digital_life_core/src/world/: environment.rs  mod.rs
digital_life_tauri/: Cargo.toml
digital_life_tauri/src/: lib.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/bridge/: mod.rs
src/components/: DigitalLifePanel.tsx
