[package]
name = "digital_life_core"
version = "0.1.0"
edition = "2021"
description = "Zero-token Digital Life Engine - Core consciousness simulation in Rust"

[lib]
name = "digital_life_core"
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"

[features]
default = []
python-bridge = []
tauri-plugin = []

[target.'cfg(not(target_os = "windows"))'.dependencies]
# Cross-platform specific deps

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
